fix font size too big

--- a/frontend/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/frontend/src/Components/GlobalStyles/GlobalStyles.scss
@@ -71,7 +71,7 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 50%;
 }
 
 body {
