--- a/frontend/src/Components/VoteCard/VoteCard.module.scss
+++ b/frontend/src/Components/VoteCard/VoteCard.module.scss
@@ -66,12 +66,14 @@
     }
 
     &__text-wrapper {
+        width: 100%;
         padding: 1.4rem;
         color: white;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-items: flex-start;
+        overflow: hidden;
 
         .votesLabel {
             background-color: rgb(119, 172, 91);
@@ -103,10 +105,12 @@
         }
     }
     &__title {
+        overflow: hidden;
         align-self: center;
         font-size: 3rem;
         margin-bottom: 1rem;
         font-weight: 400;
+        padding: 10px;
         color: var(--text-color);
         // text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
